avoid painting empty pixmaps.

BUG:161122

svn path=/trunk/KDE/kdebase/workspace/libs/plasma/; revision=799536